--- a/styles.css
+++ b/styles.css
@@ -12,36 +12,132 @@ li {
 .sidebar {
     grid-column: 1/2;
     grid-row: 1/-1;
-    display: grid;
-    grid-template-rows: 1fr 3fr 2fr;
-    background-color: chartreuse;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    /* padding-right: 20px; */
+    padding-top: 25px;
+    background-color: #00a8e8;
+    color: white;
+    font-weight: bold;
 }
 
 .logo {
-    grid-row: 1/2;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    justify-content: center; 
+    gap: 20px;
+    align-items: center;
 }
-.menu-main{
-    grid-row: 2/3;
+.logo-text {
+    font-size: 30px;
 }
-.menu-secondary{
-    grid-row: 3/4;
+.logo-image {
+    height: 50px;
+    width: 50px;
+    filter: invert(1);
+}
+.menu-main, .menu-secondary{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.menu-main li, .menu-secondary li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.icon {
+    height: 30px;
+    width: 30px;
+    color: #F9F9F9;
+    filter: invert(1); /*To make black icons turn white */
+}
+
+.icon-text {
+    color: #F9F9F9;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+
+.profile-image {
+    height: 55px;
+    width: 55px;
+    border-radius: 50%;
+   
+}
+
+.top-section, .bottom-section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* padding: 10px 40px; */
 }
 
 .header-container {
     grid-column: 2/-1;
     grid-row: 1/2;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+    background-color: #F9F9F9;
+    padding: 10px 30px;
 }
 
-.search{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    background-color: red;
+ .search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
+#search-field {
+    height: 40px;
+    width: 700px;
+    background-color: #e0e0e0;
+    /* border-radius: 5%; */
+}
+.profile {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    align-items: center;
+}
+
+.welcome {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+}
+.welcome #welcome-profile-picture {
+    width: 70px;
+    height: 70px;
+}
+
+.hi {
+    font-size: 20px;
+}
+.name {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.dataButtons {
+    display: flex;
+    /* justify-content: center; */
+    gap: 20px;
+}
+
+button {
+    background-color: #00a8e8;
+    border-radius: 20%;
+    color: #F9F9F9;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+/*
 .profile{
     grid-column: 2/-1;
     grid-row: 1/2;
@@ -70,7 +166,7 @@ li {
     grid-column: 2/-1;
     grid-row: 2/-1;
     background-color: aqua;
-}
+} */
 
 .main-content {
     grid-column: 2/-1;
@@ -100,3 +196,6 @@ li {
 .trending{
     background-color: aqua;
 }
+
+
+
