--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #e0e0e0;
+}
+
 li {
     list-style: none;
 }
@@ -147,14 +153,18 @@ button {
     grid-row: 2/-1;
     display: grid;
     grid-template-columns: 4fr 1fr;
-    grid-template-rows: 1fr 385px;
+    grid-template-rows: 1fr 500px;
     gap: 25px;
     padding: 20px 25px;
 }
 
+.main-content h3 {
+    font-size: 24px;
+}
+
 .projects{
     grid-column: 1/2;
-    grid-row: 1/-1;
+    grid-row: 1/3;
     display: flex;
     flex-direction: column;
     /* gap: 50px; */
@@ -163,7 +173,7 @@ button {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .project {
@@ -171,7 +181,7 @@ button {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     padding: 25px;
     /* height: 250px; */
-    height: 15vh;
+    height: 18vh;
     border-left: 8px solid orange;
     display: flex;
     flex-direction: column;
@@ -179,7 +189,20 @@ button {
 }
 
 .project-title {
+    font-size: 24px;
+    margin: 20px;
+    margin-left: 0;
+}
+
+.textSection p {
     font-size: 20px;
+}
+
+.buttonSection {
+    display: flex;
+    gap: 25px;
+    justify-content: flex-end;
+    filter: invert(1);
 }
 
 .annoucements{
@@ -187,8 +210,12 @@ button {
     grid-row: 1/2;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: center; */
     gap: 10px;
+}
+
+.announcement p {
+    font-size: 16px;
 }
 
 .annoucement-content, .trending-content{
@@ -206,8 +233,8 @@ button {
     grid-row: 2/3;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    gap: 15px;
+    /* justify-content: space-evenly; */
+    gap: 10px;
 }
 
 
@@ -222,6 +249,12 @@ button {
     display: flex;
     flex-direction: column;
     margin: 0;
+}
+
+.trending-title {
+    /* margin: 10px; */
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .trend-text p {
